# Job-Application-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat
api_tests/: ENDPOINTS.md  test_http.py
data/: application_rules.yaml  master_resume.yaml  sample_master_profile.yaml  sample_project_bank.yaml
scraper/: .env.example  api_client.py  config.py  main.py  politeness.py  watchlist.example.yaml
scraper/deploy/: install.sh  scraper.service  scraper.timer
scraper/sources/: __init__.py  _date.py  _html.py  _match.py  _url.py  ashby.py  greenhouse.py  hn_who_is_hiring.py  lever.py  workday.py
server/: __init__.py  app.py  auth.py  dependencies.py  schemas.py
server/routers/: applications.py  dashboard.py
skills/job-apply-assist/: SKILL.md
src/: __init__.py  __main__.py  browser_apply.py  claim_auditor.py  config.py  cover_letter.py  filelock.py  fit_scorer.py  job_parser.py  job_scraper.py  main.py  models.py  notifications.py  openclaw_adapter.py  pdf_renderer.py  pipeline.py  resume_tailor.py  tracker.py
templates/: cover_letter_template.html  cover_letter_template.md  resume_template.html
tests/: conftest.py  sample_job_java.txt  sample_job_react.txt  test_claim_auditor.py  test_cover_letter.py  test_fit_scorer.py  test_job_parser.py  test_openclaw_adapter.py  test_pdf_renderer.py  test_resume_tailor.py  test_tracker.py  test_versioning.py
web/: package-lock.json  package.json
web/src/: App.tsx  styles.css
web/src/api/: client.ts  types.ts
web/src/components/: ApplicationTable.tsx  AuditReport.tsx  ConfirmDialog.tsx  FilterBar.tsx  (+5 more)
(+4 files in other folders)
