[project]
name = "job-application-agent"
version = "0.2.0"
description = "CLI tool that tailors resumes to job descriptions using truthful source data"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Justin Chan"}]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
job-agent = "src.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
